--- a/css/home.css
+++ b/css/home.css
@@ -22,54 +22,78 @@ div{
     display: block;
 }
 
-/*Solo Header*/
+/*HEADER*/
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+}
+
+.navbar a{
+color: var(--letra);
+}
+
+.navbar a:hover{
+color: var(--rojo);
+}
+
 header{
-    position: absolute;
-    top: 0;
-    height: 90px;
+    position: relative;
     background: var(--fondo);
-    width: 100%;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
     font-weight: 600;
 }
 
-header .header-cont{
+.navbar{
+    width: 100%;
+    height: 80px;
+    max-width: 1200px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
-header .header-cont .home{
+.navbar .home{
     cursor: pointer;
 }
 
-header .header-cont .home img{
+.navbar .links{
+    display: flex;
+    gap: 2rem;
+}
+
+.navbar .home img{
     width: 150px;
     height: 60px;
 }
 
-header .header-cont .perfil img{
-    width: 90px;
-    height: 90px;
-}
-
-header .header-cont .perfil{
+.navbar .perfil img{
+    width: 60px;
+    height: 60px;
     cursor: pointer;
 }
 
+.navbar .menu_btn{
+    color: var(--letra);
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
+}
 
-/*Bienvenida y Progreso*/
+/*BIENVENIDA*/
 .inicio{
-    background: var(--gris);
+    background: var(--fondo);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 300px;
+    height: 200px;
     padding: 5rem;
-    box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .3);
+    box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
 }
 
 .bienvenida-conten{
@@ -77,7 +101,6 @@ header .header-cont .perfil{
     align-items: center;
     justify-content: center;
     height: 100px;
-    margin-top: 100px;
     font-size: 25px;
     line-height: 1.6;
     width: 150px;
@@ -97,8 +120,7 @@ header .header-cont .perfil{
     margin-left: 15px;
 }
 
-
-
+/*PROGRESO*/
 .progreso{
     height: 80px;
     display: flex;
@@ -118,18 +140,16 @@ header .header-cont .perfil{
 
 .fondo{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+    bottom: 0;
     min-height: 100vh;
     background: linear-gradient(-180deg, var(--fondo), var(--rojo));
     opacity: .1;
     background-size: cover;
-    z-index: -1;
+    z-index: -2;
     filter: blur(4px);
 }
 
-/*Categorias*/
+/*CATEGORIAS*/
 .categoria-contenedor{
     height: 70%;
     display: flex;
@@ -190,19 +210,20 @@ header .header-cont .perfil{
     color: var(--fondo);
 }
 
+.categoria-contenedor .botones .boton button:active{
+    transform: scale(0.95);
+}
+
 .footer{
     opacity: .8;
     background-color: var(--morado);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
+    position: relative;
     bottom: 0;
     padding: 1rem;
-    text-align: center;
     color: var(--fondo);
-    width: 100%;
-    text-decoration: none;
 }
 
 .footer p{
@@ -211,4 +232,68 @@ header .header-cont .perfil{
 
 .footer p:hover{
     text-decoration: underline;
+}
+
+/* DROPDOWN MENU */
+.dropdown_menu{
+    display: none;
+    position: absolute;
+    height: 0;
+    width: 100%;
+    background-color: rgba(175, 60, 249, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 1;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown_menu.open{
+    height: 240px;
+}
+
+.dropdown_menu li{
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dropdown_menu a{
+    color: var(--letra);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.dropdown_menu a:hover{
+    color: var(--rojo);
+}
+
+.dropdown_menu a:active{
+    transform: scale(0.95);
+}
+
+/* RESPONSIVE */
+@media(max-width: 992px){
+    .navbar .links{
+        display: none;
+    }
+
+    .navbar .menu_btn{
+        display: block;
+    }
+
+    .dropdown_menu {
+        display: block;
+    }
+}
+
+@media (max-width: 576px){
+    .dropdown_menu{
+        width: 100%;
+    }
+
+    .perfil{
+        display: none;
+    }
 }
