--- a/css/home.css
+++ b/css/home.css
@@ -18,10 +18,6 @@
     transition: all .2s linear;
 }
 
-div{
-    display: block;
-}
-
 /*HEADER*/
 
 li{
@@ -41,10 +37,13 @@ color: var(--rojo);
 }
 
 header{
-    position: relative;
+    position: fixed;
+    width:100%;
+    top: 0;
     background: var(--fondo);
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
     font-weight: 600;
+    z-index: 1;
 }
 
 .navbar{
@@ -91,6 +90,7 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 90px;
     height: 200px;
     padding: 5rem;
     box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
@@ -215,13 +215,14 @@ header{
 }
 
 .footer{
-    opacity: .8;
-    background-color: var(--morado);
+    position: relative;
+    bottom: -42vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: relative;
-    bottom: 0;
+    opacity: .8;
+    background-color: var(--morado);
     padding: 1rem;
     color: var(--fondo);
 }
@@ -234,7 +235,7 @@ header{
     text-decoration: underline;
 }
 
-/* DROPDOWN MENU */
+/* DROPDOWN MENU A */
 .dropdown_menu{
     display: none;
     position: absolute;
@@ -273,6 +274,45 @@ header{
     transform: scale(0.95);
 }
 
+/* DROPDOWN MENU B */
+.dropdown_menuB{
+    display: none;
+    position: absolute;
+    height: 0;
+    width: 100%;
+    background-color: rgba(175, 60, 249, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 1;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.dropdown_menuB.open{
+    height: 240px;
+}
+
+.dropdown_menuB li{
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dropdown_menuB a{
+    color: var(--letra);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.dropdown_menuB a:hover{
+    color: var(--rojo);
+}
+
+.dropdown_menuB a:active{
+    transform: scale(0.95);
+}
+
 /* RESPONSIVE */
 @media(max-width: 992px){
     .navbar .links{
@@ -289,6 +329,13 @@ header{
 }
 
 @media (max-width: 576px){
+    .categoria-contenedor .botones .boton{
+        transform: scale(.8);
+        display: flex;
+        flex-flow: row wrap;
+        margin: -10px;
+    }
+    
     .dropdown_menu{
         width: 100%;
     }
