Avances en el perfil del usuario

--- a/css/perfil.css
+++ b/css/perfil.css
@@ -50,7 +50,6 @@ header{
     width: 100%;
     height: 80px;
     max-width: 1200px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -83,137 +82,102 @@ header{
     display: none;
 }
 
-/*BIENVENIDA*/
-.inicio{
-    background: var(--fondo);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 90px;
-    height: 200px;
-    padding: 5rem;
-    box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
+
+/*INFORMACIÓN*/
+.info_principal{
+    margin-top: 50px;
+    text-align: center;
 }
 
-.bienvenida-conten{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.info_principal img{
+    width: 100px;
     height: 100px;
-    font-size: 25px;
-    line-height: 1.6;
-    width: 150px;
 }
 
-.bienvenida-conten .bienvenido{
-    font-size: 20px;
+.info_conten{
+    margin-top: 2rem;
+    box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .1);
+    height: 335px;
+    border-radius: 14px;
+    background: var(--fondo);
+    width: 100%;
 }
 
-.bienvenida-conten .nombre:hover{
-    transform: rotate(8deg);
-}
-
-.bienvenida-conten .nombre a{
-    text-decoration: none;
-    color: var(--rojo);
-    margin-left: 15px;
-}
-
-/*PROGRESO*/
-.progreso{
-    height: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px;
-} 
-
-.progreso .titulo-progreso{
-    margin-bottom: -5px;
-}
-
-.progreso .barra-base{
-    transform: scale(.8);
-}
-
-.fondo{
-    position: absolute;
-    bottom: 0;
-    min-height: 100vh;
-    background: linear-gradient(-180deg, var(--fondo), var(--rojo));
-    opacity: .1;
-    background-size: cover;
-    z-index: -2;
-    filter: blur(4px);
-}
-
-/*CATEGORIAS*/
-.categoria-contenedor{
-    height: 70%;
-    display: flex;
-    flex-flow: column wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.categoria-contenedor .titulo{
-    margin-top: 35px;
-    margin-bottom: 10px;
-    font-size: 20px;
-}
-
-.categoria-contenedor .botones{
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.categoria-contenedor .botones .boton{
-    display: flex;
-    padding: 2rem 3rem;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    box-shadow: 0 .2rem 1rem rgba(0, 0, 0, .3);
-    margin: 15px;
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.categoria-contenedor .botones .boton img{
-    height: 10rem;
-}
-
-.categoria-contenedor .botones .boton:hover img{
-    transform: scale(1.2);
-}
-
-.categoria-contenedor .botones .boton button{
-    height: 50px;
-    width: 150px;
-    background-color: var(--letra);
-    color: var(--fondo);
-    font-weight: bold;
-    font-size: 18px;
-    border: none;
-    margin: 5px;
-    border-radius: 20px;
-    cursor: pointer;
-}
-
-.categoria-contenedor .botones .boton button:hover{
-    transform: scale(1.1);
+.info_conten .titulo{
+    font-size: 90%;
+    font-weight: 600;
+    text-align: center;
+    user-select: none;
+    border-radius: 15px 15px 0 0;
     background: linear-gradient(-135deg, var(--morado), var(--rojo));
     color: var(--fondo);
 }
 
-.categoria-contenedor .botones .boton button:active{
+.info_conten form{
+    padding: 10px 30px 50px 30px;
+}
+
+.info_conten form .info{
+    height: 50px;
+    width: 100%;
+    margin-top: 20px;
+    position: relative;
+}
+
+.info_conten form .info input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    font-size: 17px;
+    padding-left: 20px;
+    border-radius: 25px;
+    border: 1px solid var(--gris-oscuro);
+    transition: all 0.3 ease;
+}
+
+.info_conten form .info input:focus,
+form .info input:valid{
+    border-color: var(--morado);
+}
+
+.info_conten form .info label{
+    position: absolute;
+    top: 50%;
+    left: 20px;
+    color: var(--gris-oscuro);
+    font-weight: 400;
+    font-size: 17px;
+    pointer-events: none;
+    transform: translateY(-50%);
+    transition: all 0.3s ease;
+}
+
+form .info input:focus ~ label,
+form .info input:valid ~ label{
+    top: 0%;
+    font-size: 16px;
+    color: var(--rojo);
+    background: var(--fondo);
+    transform: translateY(-50%);
+}
+
+form .info input[type="submit"]{
+    color: var(--fondo);
+    border: none;
+    padding-left: 0;
+    margin-top: -10px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    background: linear-gradient(-135deg, var(--morado), var(--rojo));
+    transition: all 0.3s ease;
+}
+
+form .info input[type="submit"]:active{
     transform: scale(0.95);
 }
 
+/*FOOTER*/
 .footer{
     position: relative;
     bottom: -41.8vh;
